[tool.poetry]
name = "fastapi-demo"
version = "0.1.0"
description = ""
authors = ["Tsong Lew <tsonglew@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
fastapi = { extras = ["standard"], version = "^0.115.4" }
uvicorn = "^0.32.0"
apache-skywalking = { path = "apache_skywalking-1.1.0-py3-none-any.whl", extras = [
    "async",
] }
pymilvus = "^2.4.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
