[tool.poetry]
name = "grpc-demo"
version = "0.1.0"
description = ""
authors = ["Tsong Lew <tsonglew@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.9.11"
grpcio = "^1.67.1"
grpcio-tools = "^1.67.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
