[tool.poetry]
name = "pymilvus-demo"
version = "0.1.0"
description = ""
authors = ["Tsong Lew <tsonglew@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.10"
pymilvus = "^2.4.9"
apache-skywalking = {path = "apache_skywalking-1.1.0-py3-none-any.whl", extras = ["grpc"]}
grpcio = "1.68.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
